<resources>
    <string name="app_name">Shoe Store Inventory</string>
    <string name="login_screen_title">Login</string>
    <string name="login_enter_btn">Login</string>
    <string name="login_create_account_btn">Create Account</string>
    <string name="login_enter_your_password_hint">Enter your password</string>
    <string name="login_password_field_label">Password</string>
    <string name="login_email_field_hint">Enter your email</string>
    <string name="login_email_field_label">Email</string>
    <string name="welcome_screen_title">Welcome</string>
    <string name="welcome_title">Welcome to the Shoe Store App!</string>
    <string name="welcome_description">Easily organize your shoe inventory.</string>
    <string name="welcome_next_btn">Next</string>
    <string name="instructions_screen_title">Instructions</string>
    <string name="instructions_how_to_use_app_title">How to use the app</string>
    <string name="instructions_how_to_use_app_description">1. Log in or create an account.\n\n2. Add shoes to your list.\n\n3. Edit or remove shoes whenever needed.</string>
    <string name="instructions_start_button">Start</string>
    <string name="shoe_list_screen_title">Shoes Inventory</string>
    <string name="shoe_list_add_shoe_content_desc">Add new shoe</string>
    <string name="shoe_list_item_size">Size: %d</string>
    <string name="shoe_detail_screen_title">Shoe Details</string>
    <string name="shoe_detail_add_new_shoe_title">Add New Shoe</string>
    <string name="shoe_detail_item_name_ed">Shoe Name</string>
    <string name="shoe_detail_company">Company</string>
    <string name="show_detail_size">Size</string>
    <string name="show_detail_description">Description</string>
    <string name="show_detail_save_btn">Save</string>
    <string name="show_detail_cancel_btn">Cancel</string>
    <string name="logout">Logout</string>
</resources>