<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/loginFragment">

    <!-- Login -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.presentation.login.LoginFragment"
        android:label="@string/login_screen_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>

    <!-- Welcome -->
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.presentation.welcome.WelcomeFragment"
        android:label="@string/welcome_screen_title"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment" />
    </fragment>

    <!-- Instructions -->
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.presentation.instructions.InstructionsFragment"
        android:label="@string/instructions_screen_title"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment" />
    </fragment>

    <!-- Shoes list -->
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.presentation.shoelist.ShoeListFragment"
        android:label="@string/shoe_list_screen_title"
        tools:layout="@layout/fragment_shoe_list">
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment" />
        <action
            android:id="@+id/action_shoeListFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Shoe details -->
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.presentation.shoedetail.ShoeDetailFragment"
        android:label="@string/shoe_detail_screen_title"
        tools:layout="@layout/fragment_shoe_detail">
        <action
            android:id="@+id/action_shoeDetailFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment" />
    </fragment>

</navigation>